deploy: de0258f30b99dd63639b8cc8e2e106f3960cd41a

--- a/ch00-00-introduction.html
+++ b/ch00-00-introduction.html
@@ -168,9 +168,24 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="introduction"><a class="header" href="#introduction">Introduction</a></h1>
-<blockquote>
-<p>Note: this book is still in progress</p>
-</blockquote>
+<p>In the first few chapters, we are going to dwell on the basics you may need to understand Angular development better later on.</p>
+<p>We are going to start with the main ES6 (ECMAScript 2015) features you should come across frequently when using TypeScript.</p>
+<p>Next, the most remarkable TypeScript features you should get familiar before starting the Angular development.</p>
+<p>After that, we are covering the Angular framework and supplemental toolings, like Angular CLI (Command Line Interface) and Webpack.</p>
+<p>Finally, you should expect many practical topics that are addressing specific application requirements and scenarios,
+including those coming from the community requests.</p>
+<h2 id="book-progress"><a class="header" href="#book-progress">Book progress</a></h2>
+<p>You can see the progress of the writing on this <a href="https://github.com/DenysVuika/angular-book/projects/1">GitHub board</a>.
+Be sure to check the board if you want to see what's coming next or what is in progress right now.</p>
+<h2 id="code-examples"><a class="header" href="#code-examples">Code examples</a></h2>
+<p>You can find all code examples in this GitHub repository: <a href="https://github.com/DenysVuika/angular-book">angular-book</a>.
+The source code gets frequently revisited and updated.</p>
+<h2 id="feedback-bug-reports-and-suggestions"><a class="header" href="#feedback-bug-reports-and-suggestions">Feedback, Bug Reports and Suggestions</a></h2>
+<p>If you have noticed a typo in the text or a bug in the code examples,
+please don't hesitate and contact me using the next email address:
+<a href="mailto:denys.vuika@gmail.com?subject=angular-book%20feedback">denys.vuika@gmail.com</a></p>
+<p>You are also invited to raise issues for the source code and examples using corresponding <a href="https://github.com/DenysVuika/angular-book/issues">issue tracker</a> at GitHub.</p>
+<p>Feel free to raise feature requests and suggestions on what you would like to see next.</p>
 
                     </main>
 
