--- a/index.html
+++ b/index.html
@@ -169,6 +169,10 @@
                     <main>
                         <h1 id="the-angular-book"><a class="header" href="#the-angular-book">The Angular Book</a></h1>
 <p><em>by Denys Vuika, with contributions from the Angular Community</em></p>
+<p>This is the second and online edition of the <a href="https://leanpub.com/developing-with-angular">Developing with Angular</a> book.</p>
+<blockquote>
+<p>Note: this book is still in progress.</p>
+</blockquote>
 
                     </main>
 
