deploy: a36ac29788998fa5b2d6615e93f9f1e9dd1ac949

--- a/ch00-00-introduction.html
+++ b/ch00-00-introduction.html
@@ -186,6 +186,12 @@ please don't hesitate and contact me using the next email address:
 <a href="mailto:denys.vuika@gmail.com?subject=angular-book%20feedback">denys.vuika@gmail.com</a></p>
 <p>You are also invited to raise issues for the source code and examples using corresponding <a href="https://github.com/DenysVuika/angular-book/issues">issue tracker</a> at GitHub.</p>
 <p>Feel free to raise feature requests and suggestions on what you would like to see next.</p>
+<h2 id="other-publications"><a class="header" href="#other-publications">Other publications</a></h2>
+<p>You can find many other interesting publications at my <a href="https://denys.dev/">Blog</a>.</p>
+<h2 id="testimonials"><a class="header" href="#testimonials">Testimonials</a></h2>
+<p>Your feedback on the book content is very appreciated.
+I would love to publish your photo and testimonial on the web page of the book.
+Email me at: <a href="mailto:denys.vuika@gmail.com?subject=angular-book%20testimonial">denys.vuika@gmail.com</a>.</p>
 
                     </main>
 
