--- a/print.html
+++ b/print.html
@@ -97,7 +97,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="title-page.html">The Angular Book</a></li><li class="chapter-item expanded affix "><a href="ch00-00-introduction.html">Introduction</a></li><li class="chapter-item expanded "><a href="chapter_1.html"><strong aria-hidden="true">1.</strong> Chapter 1</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="title-page.html">The Angular Book</a></li><li class="chapter-item expanded affix "><a href="ch00-00-introduction.html">Introduction</a></li><li class="chapter-item expanded "><a href="ch00-01-prerequisites.html"><strong aria-hidden="true">1.</strong> Prerequisites</a></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">1.1.</strong> Node</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">1.2.</strong> Visual Studio Code</div></li></ol></li><li class="chapter-item expanded "><a href="ch01-00-es6.html"><strong aria-hidden="true">2.</strong> ES6</a></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">2.1.</strong> Classes</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.2.</strong> Inheritance</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.3.</strong> Arrow Functions</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.4.</strong> Template Literals</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.5.</strong> Extended Parameter Handling</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.6.</strong> Destructuring assignment</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.7.</strong> See also</div></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.</strong> TypeScript</div></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">3.1.</strong> Getting Started with TypeScript</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.2.</strong> TypeScript Features</div></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">4.</strong> Angular</div></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">4.1.</strong> Angular CLI</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">4.2.</strong> Components</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">4.3.</strong> Dependency Injection</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">4.4.</strong> Events</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">4.5.</strong> Directives</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">4.6.</strong> Walkthrough: Upload Directive</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">4.7.</strong> Pipes</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">4.8.</strong> Global Application Configuration</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">4.9.</strong> Internationalisation (i18n)</div></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">5.</strong> Advanced Angular</div></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">5.1.</strong> Reusable Component Libraries</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">5.2.</strong> Using with Docker</div></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">6.</strong> Webpack</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">7.</strong> Building a Mobile App with Cordova and Angular</div></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -200,13 +200,8 @@ please don't hesitate and contact me using the next email address:
 <p>Your feedback on the book content is very appreciated.
 I would love to publish your photo and testimonial on the web page of the book.
 Email me at: <a href="mailto:denys.vuika@gmail.com?subject=angular-book%20testimonial">denys.vuika@gmail.com</a>.</p>
-<h1 id="chapter-1"><a class="header" href="#chapter-1">Chapter 1</a></h1>
-<pre><code class="language-ts">class MyComponent {
-  constructor() {
-    console.log('Hello, world');
-  }
-}
-</code></pre>
+<h1 id="prerequisites"><a class="header" href="#prerequisites">Prerequisites</a></h1>
+<h1 id="es6"><a class="header" href="#es6">ES6</a></h1>
 
                     </main>
 
