deploy: f96509ebbfbbcaad230d9730974b9dbd43ae22c0

--- a/ch15-08-see-also.html
+++ b/ch15-08-see-also.html
@@ -167,7 +167,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h2 id="see-also"><a class="header" href="#see-also">See also</a></h2>
+                        <h2 id="see-also"><a class="header" href="#see-also">See Also</a></h2>
 <p><a href="https://docs.travis-ci.com/user/docker/">Using Docker in Builds</a></p>
 <h3 id="source-code"><a class="header" href="#source-code">Source Code</a></h3>
 <p>You can find the source code in the
