--- a/print.html
+++ b/print.html
@@ -11618,7 +11618,7 @@ log in to Docker Hub and push the image to your account.</p>
 <p><img src="images/ng-docker-01.png" alt="Travis Variables" /></p>
 <p>Now, if you push the code and switch to the Travis output, you are going to see something like the following:</p>
 <p><img src="images/ng-docker-02.png" alt="Travis Output" /></p>
-<h2 id="see-also-2"><a class="header" href="#see-also-2">See also</a></h2>
+<h2 id="see-also-2"><a class="header" href="#see-also-2">See Also</a></h2>
 <p><a href="https://docs.travis-ci.com/user/docker/">Using Docker in Builds</a></p>
 <h3 id="source-code"><a class="header" href="#source-code">Source Code</a></h3>
 <p>You can find the source code in the
