deploy: 668c4bbea2c76b616d28080473c96ec0bef1ca0f

--- a/print.html
+++ b/print.html
@@ -1812,7 +1812,7 @@ widget.minWidth = 1000;
 <div style="break-before: page; page-break-before: always;"></div><h2 id="interfaces"><a class="header" href="#interfaces">Interfaces</a></h2>
 <p>An <em>interface</em> is a description of the actions that an object can do.</p>
 <p>You might already be familiar with <em>interfaces</em> in other programming languages like C# and Java,
-or <em>contracts</em> in Swift.</p>
+or <em>protocols</em> in Swift.</p>
 <p>Interfaces are not part of the ECMAScript.
 It is a level of abstraction supported by TypeScript to improve the type-checking process, and not converted to JavaScript code.</p>
 <p>Here's an example of an interface describing generic <strong>Text</strong> component:</p>
